--- a/app/src/main/res/layout/activity_leave_review.xml
+++ b/app/src/main/res/layout/activity_leave_review.xml
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="13dp"
-        android:text="#"
+        android:text="0"
         android:textColor="#FD5151"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/seekVLeaveReview_score"
