22 tasks left today

--- a/app/src/main/res/layout/activity_choose_update.xml
+++ b/app/src/main/res/layout/activity_choose_update.xml
@@ -5,6 +5,65 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#253BF6"
     tools:context=".ChooseUpdateActivity">
 
+    <Button
+        android:id="@+id/btnVChooseUp_confirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="41dp"
+        android:backgroundTint="#FECF40"
+        android:text="This, please!"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@+id/spnVchooseUp" />
+
+    <TextView
+        android:id="@+id/txtVchooseUp_uname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="sans-serif-black"
+        android:text="Welcome, USERNAME!"
+        android:textAlignment="center"
+        android:textColor="#FC5151"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/textView11"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="What do you want to update?"
+        android:textColor="#FCCD40"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtVchooseUp_uname" />
+
+    <Spinner
+        android:id="@+id/spnVchooseUp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+    <Button
+        android:id="@+id/btnVChooseUp_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:backgroundTint="#FECF40"
+        android:text="Nevermind."
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/btnVChooseUp_confirm"
+        app:layout_constraintTop_toBottomOf="@+id/btnVChooseUp_confirm" />
 </androidx.constraintlayout.widget.ConstraintLayout>
