--- a/app/src/main/res/layout/activity_choose_update.xml
+++ b/app/src/main/res/layout/activity_choose_update.xml
@@ -51,6 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
+        android:backgroundTint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
