FINISH UPDATE PASSWORD FUNCTION
23 tasks left today

--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -25,14 +25,14 @@
         android:id="@+id/oldPassV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
         android:ems="10"
         android:hint="Old Password"
         android:inputType="text"
         android:textColorHighlight="#FB5151"
         android:textColorHint="#BEF65055"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/txtUpPass_uname"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtUpPass_uname" />
 
     <TextView
