--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,6 +29,7 @@
         android:ems="10"
         android:hint="Username"
         android:inputType="text"
+        android:maxLength="50"
         android:textColor="#000000"
         android:textColorHint="#80FFD040"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,6 +44,7 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="text"
+        android:maxLength="50"
         android:textColor="#000000"
         android:textColorHint="#80FFD040"
         app:layout_constraintStart_toStartOf="@+id/etVRegister_username"
