--- a/app/src/main/res/layout/activity_battle_choose.xml
+++ b/app/src/main/res/layout/activity_battle_choose.xml
@@ -12,11 +12,11 @@
         android:id="@+id/txtVBattleChoose_trainerNames"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginBottom="11dp"
         android:fontFamily="sans-serif-black"
         android:text="CURRENT USER VERSUS CHOSEN USER!"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="#FE5151"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtVBaChoo_userPlease"
@@ -27,13 +27,13 @@
         android:id="@+id/txtVBaChoo_userPlease"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="9dp"
         android:fontFamily="sans-serif-medium"
         android:text="CURRENT USER, please choose your team."
         android:textColor="#FDCE40"
         app:layout_constraintBottom_toTopOf="@+id/baChoo_list"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/txtVBattleChoose_trainerNames"
         app:layout_constraintTop_toBottomOf="@+id/txtVBattleChoose_trainerNames" />
 
     <Button
