--- a/app/src/main/res/layout/activity_battle_results.xml
+++ b/app/src/main/res/layout/activity_battle_results.xml
@@ -18,7 +18,7 @@
         android:textColor="#FD5151"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtVBattleResults_currentUserTeam"
-        app:layout_constraintStart_toStartOf="@+id/txtVBattleResults_currentUserTeam"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -28,8 +28,8 @@
         android:text="PKMN 1, PKMN 2, PKMN 3, PKMN 4, PKMN 5, and PKMN 6"
         android:textColor="#FCCD40"
         app:layout_constraintBottom_toTopOf="@+id/txtVBattleResults_currentUserBST"
-        app:layout_constraintEnd_toEndOf="@+id/txtVBattleResults_currentUserBST"
-        app:layout_constraintStart_toEndOf="@+id/txtVBattleResults_currentUserBST"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtVResults_curUse" />
 
     <TextView
@@ -55,7 +55,7 @@
         android:textColor="#FC5151"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/txtVBattleResults_chosenUserTeam"
-        app:layout_constraintStart_toStartOf="@+id/txtVBattleResults_chosenUserTeam"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtVBattleResults_currentUserBST" />
 
     <TextView
@@ -65,8 +65,8 @@
         android:text="PKMN 1, PKMN 2, PKMN 3, PKMN 4, PKMN 5, and PKMN 6"
         android:textColor="#FECF40"
         app:layout_constraintBottom_toTopOf="@+id/txtVBattleResults_chosenUserBST"
-        app:layout_constraintEnd_toEndOf="@+id/txtVBattleResults_chosenUserBST"
-        app:layout_constraintStart_toEndOf="@+id/txtVBattleResults_chosenUserBST"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtVBattleResults_chosenUser" />
 
     <TextView
@@ -94,8 +94,8 @@
         android:textColor="#FCCD40"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/btnVBattleResults_ok"
-        app:layout_constraintEnd_toEndOf="@+id/txtVBattleResults_chosenUserBST"
-        app:layout_constraintStart_toEndOf="@+id/txtVBattleResults_chosenUserBST"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtVBattleResults_chosenUserBST" />
 
     <Button
@@ -111,5 +111,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtVBattleResults_results" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginBottom="20dp"
+        android:text="Please note that this battle calculator is not infalliable."
+        android:textColor="@color/yellow"
+        app:layout_constraintBottom_toTopOf="@+id/btnVBattleResults_ok"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
