--- a/app/src/main/res/layout/cell_choose_review.xml
+++ b/app/src/main/res/layout/cell_choose_review.xml
@@ -40,11 +40,11 @@
         android:id="@+id/chRTwo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="35dp"
         android:text="PKMN 2"
         android:textColor="@color/yellow"
-        app:layout_constraintStart_toEndOf="@+id/chRUUser"
+        app:layout_constraintEnd_toStartOf="@+id/chRThree"
+        app:layout_constraintStart_toEndOf="@+id/chROne"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
