--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -8,6 +8,31 @@
     android:background="#253BF8"
     tools:context=".SearchActivity">
 
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="11dp"
+        android:text="Average Base Stat Total Lower Bound"
+        android:textColor="@color/yellow"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spnVSearch_pokemon" />
+
+    <EditText
+        android:id="@+id/search_lowerBound"
+        android:layout_width="169dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:ems="10"
+        android:hint="Number"
+        android:inputType="numberDecimal"
+        android:textColorHint="#80FFD040"
+        app:layout_constraintBottom_toTopOf="@+id/imgbtnVSearch_search"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/search_upper" />
+
     <EditText
         android:id="@+id/etSearchCreator"
         android:layout_width="wrap_content"
@@ -16,7 +41,6 @@
         android:hint="Username"
         android:inputType="text"
         android:textColorHint="#80FFD040"
-        app:layout_constraintBottom_toTopOf="@+id/textView14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
@@ -30,7 +54,6 @@
         android:text="Team Search"
         android:textColor="#FE5151"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -42,7 +65,6 @@
         android:layout_marginStart="14dp"
         android:text="Team Creator"
         android:textColor="#FDCE40"
-        app:layout_constraintBottom_toTopOf="@+id/etSearchCreator"
         app:layout_constraintStart_toStartOf="@+id/textView12"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
@@ -50,36 +72,33 @@
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
         android:text="Has Pokémon"
         android:textColor="#FDCE40"
-        app:layout_constraintBottom_toTopOf="@+id/spnVSearch_pokemon"
         app:layout_constraintEnd_toEndOf="@+id/etSearchCreator"
         app:layout_constraintStart_toStartOf="@+id/etSearchCreator"
         app:layout_constraintTop_toBottomOf="@+id/etSearchCreator" />
 
     <ImageButton
         android:id="@+id/imgbtnVSearch_search"
-        android:layout_width="0dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="75dp"
-        android:layout_marginEnd="75dp"
+        android:layout_width="254dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="53dp"
+        android:layout_marginBottom="48dp"
         android:backgroundTint="#FDCE40"
         android:scaleX=".6"
         android:scaleY=".6"
-        app:layout_constraintBottom_toTopOf="@+id/btnVSearch_back"
+        app:layout_constraintBottom_toBottomOf="@+id/btnVSearch_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spnVSearch_pokemon"
+        app:layout_constraintTop_toBottomOf="@+id/textView20"
         app:srcCompat="@drawable/searchbutton" />
 
     <Spinner
         android:id="@+id/spnVSearch_pokemon"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="78dp"
+        android:layout_marginTop="5dp"
         android:backgroundTint="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/btnVSearch_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
@@ -88,24 +107,51 @@
         android:id="@+id/btnVSearch_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
         android:backgroundTint="#FDCE40"
         android:text="Go Back"
         android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/lvVSearch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spnVSearch_pokemon" />
+        app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
     <ListView
         android:id="@+id/lvVSearch"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginEnd="14dp"
         android:layout_marginBottom="11dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnVSearch_back" />
+
+    <EditText
+        android:id="@+id/search_upper"
+        android:layout_width="169dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="35dp"
+        android:ems="10"
+        android:hint="Number"
+        android:inputType="numberDecimal"
+        android:textColorHint="#80FFD040"
+        app:layout_constraintBottom_toBottomOf="@+id/imgbtnVSearch_search"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spnVSearch_pokemon" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:text="Average Base Stat Total Upper Bound"
+        android:textColor="@color/yellow"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/search_upper"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
