--- a/app/src/main/res/layout/activity_delete_team.xml
+++ b/app/src/main/res/layout/activity_delete_team.xml
@@ -12,20 +12,36 @@
         android:id="@+id/deleteTeam_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-black"
         android:text="USERNAME, please click on the team you want to delete. Make sure you're sure about this!"
         android:textAlignment="textStart"
         android:textColor="#FE5151"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintBottom_toTopOf="@+id/delT_list"
+        app:layout_constraintEnd_toEndOf="@+id/delT_list"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/delT_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#FCCD40"
         android:text="I've changed my mind. Take me back, please!"
         android:textColor="@color/black"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="659dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/delT_list" />
+
+    <ListView
+        android:id="@+id/delT_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/delT_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/deleteTeam_username" />
 </androidx.constraintlayout.widget.ConstraintLayout>
